--- a/src/style.scss
+++ b/src/style.scss
@@ -67,3 +67,55 @@
     }
   }
 }
+
+.Home {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .container {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
+    display: flex;
+    overflow: hidden;
+
+    .SideBar {
+      flex: 1;
+      background-color: #3e3c61;
+
+      .NavBar {
+        display: flex;
+        align-items: center;
+        background-color: #2f2d52;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
+        color: #ddddf7;
+
+        .Logo {
+          font-weight: bold;
+        }
+
+        .user {
+          display: flex;
+          gap: 10px;
+
+          img {
+            background-color: #ddddf7;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+
+    .Chat {
+      flex: 2;
+    }
+  }
+}
