adding the chat and input

--- a/src/style.scss
+++ b/src/style.scss
@@ -189,6 +189,11 @@
           cursor: pointer;
         }
       }
+
+      .MessagesContent {
+        background-color: #ddddf7;
+        padding: 10px;
+      }
     }
   }
 }
