--- a/src/style.scss
+++ b/src/style.scss
@@ -190,10 +190,29 @@
         }
       }
 
-      .MessagesContent {
+      .messages {
         background-color: #ddddf7;
         padding: 10px;
         height: calc(100% - 160px);
+
+        .message {
+          display: flex;
+          gap: 20px;
+
+          .messageInfo {
+            img {
+              width: 40px;
+              height: 4opx;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+          }
+          .messageContent {
+            img {
+              width: 50%;
+            }
+          }
+        }
       }
 
       .Input {
