--- a/src/style.scss
+++ b/src/style.scss
@@ -202,7 +202,7 @@
           .messageInfo {
             img {
               width: 40px;
-              height: 4opx;
+              height: 40px;
               border-radius: 50%;
               object-fit: cover;
             }
