--- a/src/style.scss
+++ b/src/style.scss
@@ -194,12 +194,18 @@
         background-color: #ddddf7;
         padding: 10px;
         height: calc(100% - 160px);
+        overflow: scroll;
 
         .message {
           display: flex;
           gap: 20px;
+          margin-bottom: 20px;
 
           .messageInfo {
+            display: flex;
+            flex-direction: column;
+            color: grey;
+            font-weight: 300;
             img {
               width: 40px;
               height: 40px;
@@ -208,8 +214,32 @@
             }
           }
           .messageContent {
+            max-width: 80%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            p {
+              background-color: white;
+              padding: 10px 20px;
+              border-radius: 0px 10px 10px 10px;
+              max-width: max-content;
+            }
             img {
               width: 50%;
+            }
+          }
+
+          &.owner {
+            flex-direction: row-reverse;
+
+            .messageContent {
+              align-items: flex-end;
+              p {
+                background-color: #8da4f1;
+                color: white;
+                border-radius: 10px 0px 10px 10px;
+              }
             }
           }
         }
