--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,19 @@
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -82,6 +98,9 @@
     height: 80%;
     display: flex;
     overflow: hidden;
+    @include tablet {
+      width: 90%;
+    }
 
     .SideBar {
       flex: 1;
@@ -98,6 +117,9 @@
 
         .Logo {
           font-weight: bold;
+          @include tablet {
+            display: none;
+          }
         }
 
         .user {
