--- a/src/style.scss
+++ b/src/style.scss
@@ -40,6 +40,10 @@
       color: #5d5b8d;
       font-size: 12px;
     }
+
+    .error {
+      color: red;
+    }
     form {
       display: flex;
       flex-direction: column;
