solving the bug of search result

--- a/src/style.scss
+++ b/src/style.scss
@@ -152,7 +152,7 @@
           }
         }
       }
-      .Search {
+      .search {
         border-bottom: 1px solid gray;
         .searchForm {
           padding: 10px;
@@ -168,7 +168,7 @@
           }
         }
       }
-      .userChat {
+      .userchats {
         padding: 10px;
         display: flex;
         align-items: center;
@@ -186,7 +186,7 @@
           object-fit: cover;
         }
 
-        .userCharInfo {
+        .userchatsInfo {
           span {
             font-size: 18px;
             font-weight: 500;
